# boot-os-pro

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
deb-skeleton/DEBIAN/: control  postinst  prerm
deb-skeleton/usr/lib/bootospro/: bootospro-helper
deb-skeleton/usr/share/applications/: bootospro.desktop
deb-skeleton/usr/share/doc/bootospro/: copyright
deb-skeleton/usr/share/polkit-1/actions/: dev.bootospro.app.policy
screenshots/: README.txt
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  disk.rs  error.rs  grub.rs  lib.rs  main.rs  manifest.rs  squash.rs  theme.rs
src/components/: DiskManager.tsx  ImagesStep.tsx  StepBar.tsx  SummaryStep.tsx  WriteStep.tsx
src/lib/: api.ts  types.ts
